--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "seed": "cd server && npm run seed",
     "render-build": "npm install && npm run build",
     "cypress": "npx cypress open",
-    "test": "npx cypress run --browser electron --headless"
+    "test": "npx cypress run --browser electron --headless",
+    "test-component": "npx cypress run --component"
   },
   "keywords": [],
   "author": "",
@@ -23,8 +24,6 @@
   "devDependencies": {
     "@testing-library/cypress": "^10.0.3",
     "@types/cypress": "^0.1.6",
-    "@types/jest": "^29.5.14",
-    "@types/mocha": "^10.0.10",
     "@types/react": "^18.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "concurrently": "^8.2.2",
